--- a/HSBA_TEMPLATE/Literatur/literatur.bib
+++ b/HSBA_TEMPLATE/Literatur/literatur.bib
@@ -1,12 +1,4 @@
-@article{PP95,
-  author = "Adam Parusi\'nski and Piotr Pragacz",
-  title = "A formula for the {E}uler characteristic of singular hypersurfaces",
-  journal = "J. Alg. Geom.",
-  volume = 4,
-  year = {1995},
-  pages = "337-351"}
-
-   @book{aigner2015buch,
+@book{aigner2015buch,
   title={Das BUCH der beweise},
   author={Aigner, Martin and Ziegler, G{\"u}nter M and Hofmann, Karl H},
   volume={3},
@@ -14,3 +6,11 @@
   publisher={Springer}
 }
 
+@article{PP95,
+  title={Chern-Schwartz-MacPherson classes and the Euler characteristic of degeneracy loci and special divisors},
+  author={Parusi{\'n}ski, Adam and Pragacz, Piotr},
+  journal={Journal of the American Mathematical Society},
+  pages={793--817},
+  year={1995},
+  publisher={JSTOR}
+}
